로그인 시작
(cherry picked from commit c24bae9c3fadf367d76312b034f370c85a25f8dd)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -80,6 +80,20 @@
 		<url-pattern>*.main</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+		<servlet-name>boardmain</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/boardmain-servlet-context.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>boardmain</servlet-name>
+		<url-pattern>*.brm</url-pattern>
+	</servlet-mapping>
 	
 	
 	
